<resources>
    <string name="app_name">Reminders</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="select_date">Date</string>
    <string name="select_time">Time</string>
    <string name="set_reminder">Add Reminder</string>
    <string name="reminder_set_success">Reminder set successfully!</string>
    <string name="reminder_error">Error setting reminder</string>
    <string name="task_title_hint">Enter title</string>
    <string name="task_description_hint">Enter description</string>
    <string name="selected_date">Selected Date: %s</string>
    <string name="selected_time">Selected Time: %s</string>
    <string name="notification_channel_name">Reminder Notifications</string>
    <string name="notification_channel_description">Notifications for reminders</string>
    <string name="manage_your_tasks">Manage your tasks</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="all_reminders">All Reminders</string>
    <string name="upcoming_reminders">Upcoming Reminders</string>
    <string name="past_reminders">Past Reminders</string>
    <string name="no_upcoming_reminders">No upcoming reminders.</string>
    <string name="no_past_reminders">No past reminders.</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="reminder_date_value">Date: %s</string>
    <string name="reminder_time_value">Time: %s</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="permissions_required">Permissions required for reminder functionality</string>
    <string name="error_title_required">Please enter a task title</string>
    <string name="error_future_time_required">Please select a future date and time</string>
</resources>